--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/howler": "^2.2.2",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
